[tool.poetry]
name = "ektelo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Cython = "^0.29.32"
future = "^0.18.2"
networkx = "^2.8.6"
nose = "^1.3.7"
numpy = "^1.23.3"
pandas = "^1.4.4"
PyYAML = "^6.0"
scipy = "^1.9.1"
setuptools = "^65.3.0"
psycopg2-binary = "^2.9.3"


[build-system]
requires = ["poetry-core","cython", "numpy","setuptools"]
build-backend = "poetry.core.masonry.api"
